fixed http://code.google.com/p/biographer/issues/detail?id=77 biomodels link to notes now visible

--- a/editor/static/biographer-editor/css/editor.css
+++ b/editor/static/biographer-editor/css/editor.css
@@ -595,7 +595,7 @@ input[type="text"] {
     padding: 5px;
     border-radius: 5px;
 }
-.biomodels_notes a {
+.biomodels_select a{
     color: blue;
     text-decoration: underline;
 }
